--- a/render.html
+++ b/render.html
@@ -29,20 +29,18 @@
 </script>
 </head>
 <body>
-    <div id="384fe51b172a46d699791a8f479b1700" style="width:1200px;height:600px;"></div>
+    <div id="9138667cf5e647b5a3c38438f1b546ab" style="width:800px;height:400px;"></div>
     <script type="text/javascript">
 
-var myChart_384fe51b172a46d699791a8f479b1700 = echarts.init(document.getElementById('384fe51b172a46d699791a8f479b1700'), 'light', {renderer: 'canvas'});
+var myChart_9138667cf5e647b5a3c38438f1b546ab = echarts.init(document.getElementById('9138667cf5e647b5a3c38438f1b546ab'), 'light', {renderer: 'canvas'});
 
-var option_384fe51b172a46d699791a8f479b1700 = {
+var option_9138667cf5e647b5a3c38438f1b546ab = {
     "title": [
         {
-            "text": "\u5168\u56fd\u4e3b\u8981\u57ce\u5e02\u7a7a\u6c14\u8d28\u91cf",
-            "subtext": "data from pm2.5",
-            "left": "center",
+            "text": "1900",
+            "left": "auto",
             "top": "auto",
             "textStyle": {
-                "color": "#fff",
                 "fontSize": 18
             },
             "subtextStyle": {
@@ -70,14 +68,13 @@ var option_384fe51b172a46d699791a8f479b1700 = {
             }
         }
     },
-    "series_id": 1728675,
+    "series_id": 6181693,
     "tooltip": {
         "trigger": "item",
         "triggerOn": "mousemove|click",
         "axisPointer": {
             "type": "line"
         },
-        "formatter": "{b}: {c}",
         "textStyle": {
             "fontSize": 14
         },
@@ -87,156 +84,30 @@ var option_384fe51b172a46d699791a8f479b1700 = {
     },
     "series": [
         {
-            "type": "scatter",
-            "coordinateSystem": "geo",
-            "symbol": "circle",
-            "symbolSize": 15,
+            "type": "bar",
+            "name": "\u7537",
             "data": [
-                {
-                    "name": "\u6d77\u95e8",
-                    "value": [
-                        121.15,
-                        31.89,
-                        9
-                    ]
-                },
-                {
-                    "name": "\u9102\u5c14\u591a\u65af",
-                    "value": [
-                        109.781327,
-                        39.608266,
-                        12
-                    ]
-                },
-                {
-                    "name": "\u62db\u8fdc",
-                    "value": [
-                        120.38,
-                        37.35,
-                        12
-                    ]
-                },
-                {
-                    "name": "\u821f\u5c71",
-                    "value": [
-                        122.207216,
-                        29.985295,
-                        12
-                    ]
-                },
-                {
-                    "name": "\u9f50\u9f50\u54c8\u5c14",
-                    "value": [
-                        123.97,
-                        47.33,
-                        14
-                    ]
-                },
-                {
-                    "name": "\u76d0\u57ce",
-                    "value": [
-                        120.13,
-                        33.38,
-                        15
-                    ]
-                },
-                {
-                    "name": "\u8d64\u5cf0",
-                    "value": [
-                        118.87,
-                        42.28,
-                        16
-                    ]
-                },
-                {
-                    "name": "\u9752\u5c9b",
-                    "value": [
-                        120.33,
-                        36.07,
-                        18
-                    ]
-                },
-                {
-                    "name": "\u4e73\u5c71",
-                    "value": [
-                        121.52,
-                        36.89,
-                        18
-                    ]
-                },
-                {
-                    "name": "\u91d1\u660c",
-                    "value": [
-                        102.188043,
-                        38.520089,
-                        19
-                    ]
-                },
-                {
-                    "name": "\u6cc9\u5dde",
-                    "value": [
-                        118.58,
-                        24.93,
-                        21
-                    ]
-                },
-                {
-                    "name": "\u83b1\u897f",
-                    "value": [
-                        120.53,
-                        36.86,
-                        21
-                    ]
-                },
-                {
-                    "name": "\u65e5\u7167",
-                    "value": [
-                        119.46,
-                        35.42,
-                        21
-                    ]
-                },
-                {
-                    "name": "\u80f6\u5357",
-                    "value": [
-                        119.97,
-                        35.88,
-                        22
-                    ]
-                },
-                {
-                    "name": "\u5357\u901a",
-                    "value": [
-                        121.05,
-                        32.08,
-                        23
-                    ]
-                },
-                {
-                    "name": "\u62c9\u8428",
-                    "value": [
-                        91.11,
-                        29.97,
-                        24
-                    ]
-                },
-                {
-                    "name": "\u4e91\u6d6e",
-                    "value": [
-                        112.02,
-                        22.93,
-                        24
-                    ]
-                },
-                {
-                    "name": "\u6885\u5dde",
-                    "value": [
-                        116.1,
-                        24.55,
-                        25
-                    ]
-                }
+                4619544,
+                4465783,
+                4057669,
+                3774846,
+                3694038,
+                3389280,
+                2918964,
+                2633883,
+                2261070,
+                1868413,
+                1571038,
+                1161908,
+                916571,
+                672663,
+                454747,
+                268211,
+                127435,
+                44008,
+                15164
             ],
+            "barCategoryGap": "20%",
             "label": {
                 "normal": {
                     "show": false,
@@ -251,13 +122,93 @@ var option_384fe51b172a46d699791a8f479b1700 = {
                         "fontSize": 12
                     }
                 }
-            }
+            },
+            "markPoint": {
+                "data": [
+                    {
+                        "type": "average",
+                        "name": "mean-Value",
+                        "symbol": "pin",
+                        "symbolSize": 50,
+                        "label": {
+                            "normal": {
+                                "textStyle": {
+                                    "color": "#fff"
+                                }
+                            }
+                        }
+                    }
+                ]
+            },
+            "markLine": {
+                "data": []
+            },
+            "seriesId": 6181693
+        },
+        {
+            "type": "bar",
+            "name": "\u5973",
+            "data": [
+                4589196,
+                4390483,
+                4001749,
+                3801743,
+                3751061,
+                3236056,
+                2665174,
+                2347737,
+                2004987,
+                1648025,
+                1411981,
+                1064632,
+                887508,
+                640212,
+                440007,
+                265879,
+                132449,
+                48614,
+                20093
+            ],
+            "barCategoryGap": "20%",
+            "label": {
+                "normal": {
+                    "show": false,
+                    "position": "top",
+                    "textStyle": {
+                        "fontSize": 12
+                    }
+                },
+                "emphasis": {
+                    "show": true,
+                    "textStyle": {
+                        "fontSize": 12
+                    }
+                }
+            },
+            "markPoint": {
+                "data": []
+            },
+            "markLine": {
+                "data": [
+                    {
+                        "type": "min",
+                        "name": "Minimum"
+                    },
+                    {
+                        "type": "max",
+                        "name": "Maximum"
+                    }
+                ],
+                "symbolSize": 10
+            },
+            "seriesId": 6181693
         }
     ],
     "legend": [
         {
             "data": [
-                ""
+                "\u7537",
+                "\u5973"
             ],
             "selectedMode": "multiple",
             "show": true,
@@ -269,29 +220,93 @@ var option_384fe51b172a46d699791a8f479b1700 = {
             }
         }
     ],
-    "backgroundColor": "#404a59",
     "animation": true,
-    "geo": {
-        "map": "china",
-        "roam": true,
-        "label": {
-            "emphasis": {
-                "show": true,
+    "xAxis": [
+        {
+            "show": true,
+            "nameLocation": "middle",
+            "nameGap": 25,
+            "nameTextStyle": {
+                "fontSize": 14
+            },
+            "axisTick": {
+                "alignWithLabel": false
+            },
+            "inverse": false,
+            "boundaryGap": true,
+            "type": "category",
+            "splitLine": {
+                "show": false
+            },
+            "axisLine": {
+                "lineStyle": {
+                    "width": 1
+                }
+            },
+            "axisLabel": {
+                "interval": "auto",
+                "rotate": 0,
+                "margin": 8,
                 "textStyle": {
-                    "color": "#eee"
+                    "fontSize": 12
+                }
+            },
+            "data": [
+                0,
+                5,
+                10,
+                15,
+                20,
+                25,
+                30,
+                35,
+                40,
+                45,
+                50,
+                55,
+                60,
+                65,
+                70,
+                75,
+                80,
+                85,
+                90
+            ]
+        }
+    ],
+    "yAxis": [
+        {
+            "show": true,
+            "nameLocation": "middle",
+            "nameGap": 25,
+            "nameTextStyle": {
+                "fontSize": 14
+            },
+            "axisTick": {
+                "alignWithLabel": false
+            },
+            "inverse": false,
+            "boundaryGap": true,
+            "type": "value",
+            "splitLine": {
+                "show": true
+            },
+            "axisLine": {
+                "lineStyle": {
+                    "width": 1
+                }
+            },
+            "axisLabel": {
+                "interval": "auto",
+                "formatter": "{value} ",
+                "rotate": 0,
+                "margin": 8,
+                "textStyle": {
+                    "fontSize": 12
                 }
             }
-        },
-        "itemStyle": {
-            "normal": {
-                "areaColor": "#323c48",
-                "borderColor": "#111"
-            },
-            "emphasis": {
-                "areaColor": "#2a333d"
-            }
         }
-    },
+    ],
     "color": [
         "#c23531",
         "#2f4554",
@@ -318,34 +333,9 @@ var option_384fe51b172a46d699791a8f479b1700 = {
         "#6950a1",
         "#918597",
         "#f6f5ec"
-    ],
-    "visualMap": {
-        "type": "continuous",
-        "min": 0,
-        "max": 200,
-        "text": [
-            "high",
-            "low"
-        ],
-        "textStyle": {
-            "color": "#fff"
-        },
-        "inRange": {
-            "color": [
-                "#50a3ba",
-                "#eac763",
-                "#d94e5d"
-            ]
-        },
-        "calculable": true,
-        "splitNumber": 5,
-        "orient": "vertical",
-        "left": "left",
-        "top": "bottom",
-        "showLabel": true
-    }
+    ]
 };
-myChart_384fe51b172a46d699791a8f479b1700.setOption(option_384fe51b172a46d699791a8f479b1700);
+myChart_9138667cf5e647b5a3c38438f1b546ab.setOption(option_9138667cf5e647b5a3c38438f1b546ab);
 
 </script>
 </body>
