--- a/render.html
+++ b/render.html
@@ -29,15 +29,16 @@
 </script>
 </head>
 <body>
-    <div id="9138667cf5e647b5a3c38438f1b546ab" style="width:800px;height:400px;"></div>
+    <div id="1d79c88305d84ca7b031043464fdc7bc" style="width:1400px;height:700px;"></div>
     <script type="text/javascript">
 
-var myChart_9138667cf5e647b5a3c38438f1b546ab = echarts.init(document.getElementById('9138667cf5e647b5a3c38438f1b546ab'), 'light', {renderer: 'canvas'});
+var myChart_1d79c88305d84ca7b031043464fdc7bc = echarts.init(document.getElementById('1d79c88305d84ca7b031043464fdc7bc'), 'light', {renderer: 'canvas'});
 
-var option_9138667cf5e647b5a3c38438f1b546ab = {
+var option_1d79c88305d84ca7b031043464fdc7bc = {
     "title": [
         {
-            "text": "1900",
+            "text": "1900-2000",
+            "subtext": "\u7537\u5973\u4eba\u6570\u6bd4",
             "left": "auto",
             "top": "auto",
             "textStyle": {
@@ -68,7 +69,7 @@ var option_9138667cf5e647b5a3c38438f1b546ab = {
             }
         }
     },
-    "series_id": 6181693,
+    "series_id": 2167459,
     "tooltip": {
         "trigger": "item",
         "triggerOn": "mousemove|click",
@@ -85,7 +86,7 @@ var option_9138667cf5e647b5a3c38438f1b546ab = {
     "series": [
         {
             "type": "bar",
-            "name": "\u7537",
+            "name": "1900\u7537",
             "data": [
                 4619544,
                 4465783,
@@ -124,30 +125,16 @@ var option_9138667cf5e647b5a3c38438f1b546ab = {
                 }
             },
             "markPoint": {
-                "data": [
-                    {
-                        "type": "average",
-                        "name": "mean-Value",
-                        "symbol": "pin",
-                        "symbolSize": 50,
-                        "label": {
-                            "normal": {
-                                "textStyle": {
-                                    "color": "#fff"
-                                }
-                            }
-                        }
-                    }
-                ]
+                "data": []
             },
             "markLine": {
                 "data": []
             },
-            "seriesId": 6181693
+            "seriesId": 2167459
         },
         {
             "type": "bar",
-            "name": "\u5973",
+            "name": "1900\u5973",
             "data": [
                 4589196,
                 4390483,
@@ -189,26 +176,114 @@ var option_9138667cf5e647b5a3c38438f1b546ab = {
                 "data": []
             },
             "markLine": {
-                "data": [
-                    {
-                        "type": "min",
-                        "name": "Minimum"
-                    },
-                    {
-                        "type": "max",
-                        "name": "Maximum"
-                    }
-                ],
-                "symbolSize": 10
+                "data": []
             },
-            "seriesId": 6181693
+            "seriesId": 2167459
+        },
+        {
+            "type": "bar",
+            "name": "2000\u7537",
+            "data": [
+                9735380,
+                10552146,
+                10563233,
+                10237419,
+                9731315,
+                9659493,
+                10205879,
+                11475182,
+                11320252,
+                9925006,
+                8507934,
+                6459082,
+                5123399,
+                4453623,
+                3792145,
+                2912655,
+                1902638,
+                970357,
+                336303
+            ],
+            "barCategoryGap": "20%",
+            "label": {
+                "normal": {
+                    "show": false,
+                    "position": "top",
+                    "textStyle": {
+                        "fontSize": 12
+                    }
+                },
+                "emphasis": {
+                    "show": true,
+                    "textStyle": {
+                        "fontSize": 12
+                    }
+                }
+            },
+            "markPoint": {
+                "data": []
+            },
+            "markLine": {
+                "data": []
+            },
+            "seriesId": 2167459
+        },
+        {
+            "type": "bar",
+            "name": "2000\u5973",
+            "data": [
+                9310714,
+                10069564,
+                10022524,
+                9692669,
+                9324244,
+                9518507,
+                10119296,
+                11635647,
+                11488578,
+                10261253,
+                8911133,
+                6921268,
+                5668961,
+                4804784,
+                5184855,
+                4355644,
+                3221898,
+                1981156,
+                1064581
+            ],
+            "barCategoryGap": "20%",
+            "label": {
+                "normal": {
+                    "show": false,
+                    "position": "top",
+                    "textStyle": {
+                        "fontSize": 12
+                    }
+                },
+                "emphasis": {
+                    "show": true,
+                    "textStyle": {
+                        "fontSize": 12
+                    }
+                }
+            },
+            "markPoint": {
+                "data": []
+            },
+            "markLine": {
+                "data": []
+            },
+            "seriesId": 2167459
         }
     ],
     "legend": [
         {
             "data": [
-                "\u7537",
-                "\u5973"
+                "1900\u7537",
+                "1900\u5973",
+                "2000\u7537",
+                "2000\u5973"
             ],
             "selectedMode": "multiple",
             "show": true,
@@ -335,7 +410,7 @@ var option_9138667cf5e647b5a3c38438f1b546ab = {
         "#f6f5ec"
     ]
 };
-myChart_9138667cf5e647b5a3c38438f1b546ab.setOption(option_9138667cf5e647b5a3c38438f1b546ab);
+myChart_1d79c88305d84ca7b031043464fdc7bc.setOption(option_1d79c88305d84ca7b031043464fdc7bc);
 
 </script>
 </body>
