--- a/Assignment1/census0.html
+++ b/Assignment1/census0.html
@@ -29,12 +29,12 @@
 </script>
 </head>
 <body>
-    <div id="49537e3091fb42789d0839f828fc6651" style="width:1400px;height:700px;"></div>
+    <div id="0cf6a6a70db84d8ca79298a1837a526e" style="width:1400px;height:700px;"></div>
     <script type="text/javascript">
 
-var myChart_49537e3091fb42789d0839f828fc6651 = echarts.init(document.getElementById('49537e3091fb42789d0839f828fc6651'), 'light', {renderer: 'canvas'});
+var myChart_0cf6a6a70db84d8ca79298a1837a526e = echarts.init(document.getElementById('0cf6a6a70db84d8ca79298a1837a526e'), 'light', {renderer: 'canvas'});
 
-var option_49537e3091fb42789d0839f828fc6651 = {
+var option_0cf6a6a70db84d8ca79298a1837a526e = {
     "title": [
         {
             "text": "1900-2000",
@@ -69,7 +69,7 @@ var option_49537e3091fb42789d0839f828fc6651 = {
             }
         }
     },
-    "series_id": 7764898,
+    "series_id": 3851172,
     "tooltip": {
         "trigger": "item",
         "triggerOn": "mousemove|click",
@@ -130,7 +130,7 @@ var option_49537e3091fb42789d0839f828fc6651 = {
             "markLine": {
                 "data": []
             },
-            "seriesId": 7764898
+            "seriesId": 3851172
         },
         {
             "type": "bar",
@@ -178,7 +178,7 @@ var option_49537e3091fb42789d0839f828fc6651 = {
             "markLine": {
                 "data": []
             },
-            "seriesId": 7764898
+            "seriesId": 3851172
         },
         {
             "type": "bar",
@@ -226,7 +226,7 @@ var option_49537e3091fb42789d0839f828fc6651 = {
             "markLine": {
                 "data": []
             },
-            "seriesId": 7764898
+            "seriesId": 3851172
         },
         {
             "type": "bar",
@@ -274,7 +274,251 @@ var option_49537e3091fb42789d0839f828fc6651 = {
             "markLine": {
                 "data": []
             },
-            "seriesId": 7764898
+            "seriesId": 3851172
+        },
+        {
+            "type": "line",
+            "name": "1900",
+            "symbol": "emptyCircle",
+            "symbolSize": 4,
+            "smooth": false,
+            "step": false,
+            "showSymbol": true,
+            "data": [
+                [
+                    "0",
+                    4604370.0
+                ],
+                [
+                    "5",
+                    4428133.0
+                ],
+                [
+                    "10",
+                    4029709.0
+                ],
+                [
+                    "15",
+                    3788294.5
+                ],
+                [
+                    "20",
+                    3722549.5
+                ],
+                [
+                    "25",
+                    3312668.0
+                ],
+                [
+                    "30",
+                    2792069.0
+                ],
+                [
+                    "35",
+                    2490810.0
+                ],
+                [
+                    "40",
+                    2133028.5
+                ],
+                [
+                    "45",
+                    1758219.0
+                ],
+                [
+                    "50",
+                    1491509.5
+                ],
+                [
+                    "55",
+                    1113270.0
+                ],
+                [
+                    "60",
+                    902039.5
+                ],
+                [
+                    "65",
+                    656437.5
+                ],
+                [
+                    "70",
+                    447377.0
+                ],
+                [
+                    "75",
+                    267045.0
+                ],
+                [
+                    "80",
+                    129942.0
+                ],
+                [
+                    "85",
+                    46311.0
+                ],
+                [
+                    "90",
+                    17628.5
+                ]
+            ],
+            "label": {
+                "normal": {
+                    "show": false,
+                    "position": "top",
+                    "textStyle": {
+                        "fontSize": 12
+                    }
+                },
+                "emphasis": {
+                    "show": true,
+                    "textStyle": {
+                        "fontSize": 12
+                    }
+                }
+            },
+            "lineStyle": {
+                "normal": {
+                    "width": 1,
+                    "opacity": 1,
+                    "curveness": 0,
+                    "type": "solid"
+                }
+            },
+            "areaStyle": {
+                "opacity": 0
+            },
+            "markPoint": {
+                "data": []
+            },
+            "markLine": {
+                "data": []
+            },
+            "seriesId": 3851172,
+            "xAxisIndex": 0,
+            "yAxisIndex": 0
+        },
+        {
+            "type": "line",
+            "name": "2000",
+            "symbol": "emptyCircle",
+            "symbolSize": 4,
+            "smooth": false,
+            "step": false,
+            "showSymbol": true,
+            "data": [
+                [
+                    "0",
+                    9523047.0
+                ],
+                [
+                    "5",
+                    10310855.0
+                ],
+                [
+                    "10",
+                    10292878.5
+                ],
+                [
+                    "15",
+                    9965044.0
+                ],
+                [
+                    "20",
+                    9527779.5
+                ],
+                [
+                    "25",
+                    9589000.0
+                ],
+                [
+                    "30",
+                    10162587.5
+                ],
+                [
+                    "35",
+                    11555414.5
+                ],
+                [
+                    "40",
+                    11404415.0
+                ],
+                [
+                    "45",
+                    10093129.5
+                ],
+                [
+                    "50",
+                    8709533.5
+                ],
+                [
+                    "55",
+                    6690175.0
+                ],
+                [
+                    "60",
+                    5396180.0
+                ],
+                [
+                    "65",
+                    4629203.5
+                ],
+                [
+                    "70",
+                    4488500.0
+                ],
+                [
+                    "75",
+                    3634149.5
+                ],
+                [
+                    "80",
+                    2562268.0
+                ],
+                [
+                    "85",
+                    1475756.5
+                ],
+                [
+                    "90",
+                    700442.0
+                ]
+            ],
+            "label": {
+                "normal": {
+                    "show": false,
+                    "position": "top",
+                    "textStyle": {
+                        "fontSize": 12
+                    }
+                },
+                "emphasis": {
+                    "show": true,
+                    "textStyle": {
+                        "fontSize": 12
+                    }
+                }
+            },
+            "lineStyle": {
+                "normal": {
+                    "width": 1,
+                    "opacity": 1,
+                    "curveness": 0,
+                    "type": "solid"
+                }
+            },
+            "areaStyle": {
+                "opacity": 0
+            },
+            "markPoint": {
+                "data": []
+            },
+            "markLine": {
+                "data": []
+            },
+            "seriesId": 3851172,
+            "xAxisIndex": 0,
+            "yAxisIndex": 0
         }
     ],
     "legend": [
@@ -283,7 +527,9 @@ var option_49537e3091fb42789d0839f828fc6651 = {
                 "1900\u7537",
                 "1900\u5973",
                 "2000\u7537",
-                "2000\u5973"
+                "2000\u5973",
+                "1900",
+                "2000"
             ],
             "selectedMode": "multiple",
             "show": true,
@@ -327,25 +573,25 @@ var option_49537e3091fb42789d0839f828fc6651 = {
                 }
             },
             "data": [
-                0,
-                5,
-                10,
-                15,
-                20,
-                25,
-                30,
-                35,
-                40,
-                45,
-                50,
-                55,
-                60,
-                65,
-                70,
-                75,
-                80,
-                85,
-                90
+                "0",
+                "5",
+                "10",
+                "15",
+                "20",
+                "25",
+                "30",
+                "35",
+                "40",
+                "45",
+                "50",
+                "55",
+                "60",
+                "65",
+                "70",
+                "75",
+                "80",
+                "85",
+                "90"
             ]
         }
     ],
@@ -410,7 +656,7 @@ var option_49537e3091fb42789d0839f828fc6651 = {
         "#f6f5ec"
     ]
 };
-myChart_49537e3091fb42789d0839f828fc6651.setOption(option_49537e3091fb42789d0839f828fc6651);
+myChart_0cf6a6a70db84d8ca79298a1837a526e.setOption(option_0cf6a6a70db84d8ca79298a1837a526e);
 
 </script>
 </body>
