--- a/render.html
+++ b/render.html
@@ -29,12 +29,12 @@
 </script>
 </head>
 <body>
-    <div id="105d473261604dba852e6bfbac30b574" style="width:1400px;height:700px;"></div>
+    <div id="dfadb08f48924aa4bb021f4fa5dbf8e4" style="width:1400px;height:700px;"></div>
     <script type="text/javascript">
 
-var myChart_105d473261604dba852e6bfbac30b574 = echarts.init(document.getElementById('105d473261604dba852e6bfbac30b574'), 'light', {renderer: 'canvas'});
+var myChart_dfadb08f48924aa4bb021f4fa5dbf8e4 = echarts.init(document.getElementById('dfadb08f48924aa4bb021f4fa5dbf8e4'), 'light', {renderer: 'canvas'});
 
-var option_105d473261604dba852e6bfbac30b574 = {
+var option_dfadb08f48924aa4bb021f4fa5dbf8e4 = {
     "title": [
         {
             "text": "1900-2000",
@@ -69,7 +69,7 @@ var option_105d473261604dba852e6bfbac30b574 = {
             }
         }
     },
-    "series_id": 2869782,
+    "series_id": 8389956,
     "tooltip": {
         "trigger": "item",
         "triggerOn": "mousemove|click",
@@ -130,7 +130,7 @@ var option_105d473261604dba852e6bfbac30b574 = {
             "markLine": {
                 "data": []
             },
-            "seriesId": 2869782
+            "seriesId": 8389956
         },
         {
             "type": "bar",
@@ -178,7 +178,7 @@ var option_105d473261604dba852e6bfbac30b574 = {
             "markLine": {
                 "data": []
             },
-            "seriesId": 2869782
+            "seriesId": 8389956
         },
         {
             "type": "bar",
@@ -226,7 +226,7 @@ var option_105d473261604dba852e6bfbac30b574 = {
             "markLine": {
                 "data": []
             },
-            "seriesId": 2869782
+            "seriesId": 8389956
         },
         {
             "type": "bar",
@@ -274,7 +274,7 @@ var option_105d473261604dba852e6bfbac30b574 = {
             "markLine": {
                 "data": []
             },
-            "seriesId": 2869782
+            "seriesId": 8389956
         },
         {
             "type": "line",
@@ -394,7 +394,7 @@ var option_105d473261604dba852e6bfbac30b574 = {
             "markLine": {
                 "data": []
             },
-            "seriesId": 2869782,
+            "seriesId": 8389956,
             "xAxisIndex": 0,
             "yAxisIndex": 0
         },
@@ -516,7 +516,7 @@ var option_105d473261604dba852e6bfbac30b574 = {
             "markLine": {
                 "data": []
             },
-            "seriesId": 2869782,
+            "seriesId": 8389956,
             "xAxisIndex": 0,
             "yAxisIndex": 0
         }
@@ -544,6 +544,7 @@ var option_105d473261604dba852e6bfbac30b574 = {
     "animation": true,
     "xAxis": [
         {
+            "name": "\u5e74\u9f84",
             "show": true,
             "nameLocation": "middle",
             "nameGap": 25,
@@ -597,9 +598,10 @@ var option_105d473261604dba852e6bfbac30b574 = {
     ],
     "yAxis": [
         {
+            "name": "\u4eba\u53e3",
             "show": true,
             "nameLocation": "middle",
-            "nameGap": 25,
+            "nameGap": 70,
             "nameTextStyle": {
                 "fontSize": 14
             },
@@ -656,7 +658,7 @@ var option_105d473261604dba852e6bfbac30b574 = {
         "#f6f5ec"
     ]
 };
-myChart_105d473261604dba852e6bfbac30b574.setOption(option_105d473261604dba852e6bfbac30b574);
+myChart_dfadb08f48924aa4bb021f4fa5dbf8e4.setOption(option_dfadb08f48924aa4bb021f4fa5dbf8e4);
 
 </script>
 </body>
